# AdventCalendar

./: .gitignore
2015/: BMP.h  BMP_test.cpp  CMakeLists.txt  day1.cpp  day1.html  day2.cpp  day2.html  day3.cpp  day3.html  day4.cpp  day4.html  day5.cpp  day5.html  day6.cpp  day6.html
2020/: CMakeLists.txt  day1.1.c  day1.2.c  day2.1.c  day2.2.c  day3.1.c  day3.2.c  day4.1.c  day4.2.c  day5.1.c  day5.2.c  day6.1.c  day6.2.c
2021/: CMakeLists.txt  Day 23 - Advent of Code 2021.html  day01.cpp  day02.cpp  day02.html  day02cc.y  day03.cpp  day04.cpp  day04.html  day05.cpp  day06.cpp  day06.html  day07.cpp  day08.cpp  day08.html  day08_p1.sh  day09.cpp  day1.cpp  day1.html  day10.cpp  day10.html  day11.cpp  day12.cpp  day12.html  day13.cpp  day13.html  day14.cpp  day14.html  day15.cpp  day15.html  day16.cpp  day16.html  day17.cpp  day17.html  day18.cpp  day18.html  day19.cpp  day2.cpp  day20.cpp  day21.cpp  (+23 more)
