cmake_minimum_required(VERSION 3.19)
project(2020 C)

set(CMAKE_C_STANDARD 99)

add_executable(day1.1 day1.1.c)
add_executable(day1.2 day1.2.c)
add_executable(day2.1 day2.1.c)
add_executable(day2.2 day2.2.c)
add_executable(day3.1 day3.1.c)
add_executable(day3.2 day3.2.c)
add_executable(day4.1 day4.1.c)
add_executable(day4.2 day4.2.c)
add_executable(day5.1 day5.1.c)
add_executable(day5.2 day5.2.c)
add_executable(day6.1 day6.1.c)
add_executable(day6.2 day6.2.c)